--- a/API/src/views/register.html
+++ b/API/src/views/register.html
@@ -35,6 +35,7 @@
     </div>
 
     <script src="../assets/js/register.js"></script>
+    <script src="../assets/js/userTable.js"></script>
 
 </body>
 </html>
