--- a/API/src/views/register.html
+++ b/API/src/views/register.html
@@ -36,6 +36,7 @@
 
     <script src="../assets/js/register.js"></script>
     <script src="../assets/js/userTable.js"></script>
+    <script src="../"></script>
 
 </body>
 </html>
