se agrego la tabla role y userStatus
se agregaron archivos para el frontend, y se hicieron cambios minimos en el index.html

--- a/API/src/views/documents.html
+++ b/API/src/views/documents.html
@@ -22,7 +22,7 @@
     <a href="/src/views/documents.html"><i class="fas fa-file-alt"></i> Documentos</a>
     <a href="/src/views/profile.html"><i class="fa-solid fa-user"></i> Profile</a>
     <a href="/src/views/role.html"><i class="fa-solid fa-key"></i> Role</a>
-    <a href="/src/views/userStatus"><i class="fa-solid fa-chart-simple"></i> UserStatus</a>
+    <a href="/src/views/userStatus.html"><i class="fa-solid fa-chart-simple"></i> UserStatus</a>
   </div>
 
   <!-- Contenido principal -->
