--- a/API/src/views/index.html
+++ b/API/src/views/index.html
@@ -40,6 +40,10 @@
     <h1 class="title">Home</h1>
     <div class="container mt-5">
       <h2 class="mb-4">Lista de Usuarios</h2>
+      <!-- Botón Crear Usuario -->
+      <button class="btn btn-success mb-3" data-bs-toggle="modal" data-bs-target="#createUserModal">
+        <i class="fas fa-user-plus"></i> Crear Usuario
+      </button>
       <div class="table-responsive">
         <table class="table table-bordered table-striped table-hover align-middle text-center">
           <thead class="table-dark">
@@ -98,7 +102,48 @@
       </div>
     </div>
   </div>
-
+ <!-- Modal para crear usuario -->
+  <div class="modal fade" id="createUserModal" tabindex="-1" aria-labelledby="createUserModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <form id="createUserForm">
+          <div class="modal-header">
+            <h5 class="modal-title" id="createUserModalLabel">Crear Usuario</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+          </div>
+          <div class="modal-body">
+            <div class="mb-3">
+              <label for="createUsername" class="form-label">Correo del Usuario</label>
+              <input type="email" class="form-control" id="createUsername" required>
+            </div>
+            <div class="mb-3">
+              <label for="createPassword" class="form-label">Contraseña</label>
+              <input type="password" class="form-control" id="createPassword" required>
+            </div>
+            <div class="mb-3">
+              <label for="createUserStatus" class="form-label">Estado</label>
+              <select id="createUserStatus" class="form-select" required>
+                <option value="1">Activo</option>
+                <option value="3">Inactivo</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="createUserRole" class="form-label">Rol</label>
+              <select class="form-select" id="createUserRole" required>
+                <option value="1">Test</option>
+                <option value="3">Cliente</option>
+                <option value="4">Administrador</option>
+              </select>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-primary">Crear</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <!--fin del modal -->
   <!-- Scripts -->
   <script src="/src/assets/js/userTable.js"></script>
   <script src="/src/assets/js/CerrarSesion.js"></script>
@@ -106,3 +151,5 @@
 </body>
 
 </html>
+
+
