--- a/API/src/views/userStatus.html
+++ b/API/src/views/userStatus.html
@@ -57,7 +57,7 @@
           </tbody>
         </table>
       </div>
-    </div>2q
+    </div>
   </div>
 
   <!-- Modal para editar estado de usuario -->
