--- a/API/src/views/profile.html
+++ b/API/src/views/profile.html
@@ -40,6 +40,10 @@
     <h1 class="title">Home</h1>
     <div class="container mt-5">
       <h2 class="mb-4">Lista de Perfiles</h2>
+      <!-- Botón Crear UserStatus -->
+      <button class="btn btn-success mb-3" data-bs-toggle="modal" data-bs-target="#createProfileModal">
+        <i class="fas fa-user-plus"></i> Crear Perfiles
+      </button>
       <div class="table-responsive">
         <table class="table table-bordered table-striped table-hover align-middle text-center">
           <thead class="table-dark">
@@ -122,6 +126,63 @@
       </div>
     </div>
   </div>
+
+  <!--Modal para crear el perfil-->
+    <!--Modal para crear user status-->
+    <div class="modal fade" id="createProfileModal" tabindex="-1" aria-labelledby="createProfileModalLabel">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <form id="createProfileForm">
+            <div class="modal-header">
+              <h5 class="modal-title" id="createProfileModalLabel">Crear perfil usuario usuario</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+            </div>
+            <div class="modal-body">
+              <div class="mb-3">
+                <label for="createName" class="form-label">Name</label>
+                <input type="text" class="form-control" id="createName" required>
+              </div>
+              <div class="mb-3">
+                <label for="createLastName" class="form-label">last Name</label>
+                <input type="text" class="form-control" id="createLastName" required>
+              </div>
+              <div class="mb-3">
+                <label for="createDocument" class="form-label">document</label>
+                <input type="text" class="form-control" id="createDocument" required>
+              </div>
+              <div class="mb-3">
+                <label for="createEmail" class="form-label">email</label>
+                <input type="email" class="form-control" id="createEmail" required>
+              </div>
+              <div class="mb-3">
+                <label for="createPhone" class="form-label">Phonee</label>
+                <input type="text" class="form-control" id="createPhone" required>
+              </div>
+              <div class="mb-3">
+                <label for="createPhoto" class="form-label">photo</label>
+                <input type="text" class="form-control" id="createPhoto" required>
+              </div>
+              <div class="mb-3">
+                <label for="createAddress" class="form-label">Address</label>
+                <input type="text" class="form-control" id="createAddress" required>
+              </div>
+              <div class="mb-3">
+                <label for="createDocumentType" class="form-label">Document Type</label>
+                <input type="number" class="form-control" id="createDocumentType" required>
+              </div>
+              <div class="mb-3">
+                <label for="createUserId" class="form-label">User_id</label>
+                <input type="number" class="form-control" id="createUserId" required>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="submit" class="btn btn-primary">Create Profile</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
 
   <!-- Scripts -->
   <script src="/src/assets/js/profileTable.js"></script>
