--- a/API/src/views/profile.html
+++ b/API/src/views/profile.html
@@ -40,7 +40,7 @@
     <h1 class="title">Home</h1>
     <div class="container mt-5">
       <h2 class="mb-4">Lista de Perfiles</h2>
-      <!-- Botón Crear UserStatus -->
+      <!-- Botón Crear User -->
       <button class="btn btn-success mb-3" data-bs-toggle="modal" data-bs-target="#createProfileModal">
         <i class="fas fa-user-plus"></i> Crear Perfiles
       </button>
@@ -128,7 +128,6 @@
   </div>
 
   <!--Modal para crear el perfil-->
-    <!--Modal para crear user status-->
     <div class="modal fade" id="createProfileModal" tabindex="-1" aria-labelledby="createProfileModalLabel">
       <div class="modal-dialog">
         <div class="modal-content">
